--- a/style.css
+++ b/style.css
@@ -19,3 +19,26 @@
 	font-weight: bold;
 	color: white;
 }
+
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#container {
+   min-height:100%;
+   position:relative;
+}
+#header {
+   background:#ff0;
+   padding:10px;
+}
+
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:250px;   /* Height of the footer */
+   background:black;
+}
