--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 }
 
 .jumbotron h1 {
+	top: 20px;
 	font-weight: bold;
 	color: white;
 }
@@ -19,6 +20,7 @@
 	font-weight: bold;
 	color: white;
 }
+
 html,
 body {
    margin:0;
